tests/rosetta/out/Smalltalk/create-an-object-at-a-given-address.out
/tmp/create-an-object-at-a-given-address.st:3: parse error, expected '|' or identifier
