tests/rosetta/out/Smalltalk/create-an-object-at-a-given-address.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| listStr s i pointerDemo sliceDemo a _ data idx |
listStr := [:xs | s := '['.
i := 0.
[(i < ((xs size)))] whileTrue: [.
s := (s + ((xs at: i asString))).
((i < ((((xs size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
s := (s + ']').
s. ].
pointerDemo := [ Transcript show: 'Pointer:'; cr.
i := 0.
Transcript show: 'Before:'; cr.
Transcript show: ((((((('	<address>: ') + ((i asString)))) + (', '))) + ((i asString)))) printString; cr.
i := 3.
Transcript show: 'After:'; cr.
Transcript show: ((((((('	<address>: ') + ((i asString)))) + (', '))) + ((i asString)))) printString; cr. ].
sliceDemo := [ Transcript show: 'Slice:'; cr.
a := {}.
0 to: 10 do: [:_ |.
a := a copyWith: 0.
].
.
s := a.
Transcript show: 'Before:'; cr.
Transcript show: ((('	s: ') + (listStr value: s))) printString; cr.
Transcript show: ((('	a: ') + (listStr value: a))) printString; cr.
data := {65. 32. 115. 116. 114. 105. 110. 103. 46}.
idx := 0.
[(idx < 9)] whileTrue: [.
s at: idx put: data at: idx.
idx := (idx + 1).
].
.
Transcript show: 'After:'; cr.
Transcript show: ((('	s: ') + (listStr value: s))) printString; cr.
Transcript show: ((('	a: ') + (listStr value: a))) printString; cr. ].
pointerDemo value.
Transcript show: ''; cr.
sliceDemo value.
